src/objects/UID_Performance__c.object
<CustomObject>
    <fields>
        <fullName>UID_Apr_IOP__c</fullName>
        <label>Apr JBP</label>
        <summarizedField>UID_Performance_Line_Item__c.UID_IOP_Value_Curr__c</summarizedField>
        <summaryFilterItems>
            <field>UID_Performance_Line_Item__c.UID_IOP_Month__c</field>
            <operation>equals</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryForeignKey>UID_Performance_Line_Item__c.UID_IOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UID_Aug_IOP__c</fullName>
        <label>Aug JBP</label>
        <summarizedField>UID_Performance_Line_Item__c.UID_IOP_Value_Curr__c</summarizedField>
        <summaryFilterItems>
            <field>UID_Performance_Line_Item__c.UID_IOP_Month__c</field>
            <operation>equals</operation>
            <value>8</value>
        </summaryFilterItems>
        <summaryForeignKey>UID_Performance_Line_Item__c.UID_IOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UID_Dec_IOP__c</fullName>
        <label>Dec JBP</label>
        <summarizedField>UID_Performance_Line_Item__c.UID_IOP_Value_Curr__c</summarizedField>
        <summaryFilterItems>
            <field>UID_Performance_Line_Item__c.UID_IOP_Month__c</field>
            <operation>equals</operation>
            <value>12</value>
        </summaryFilterItems>
        <summaryForeignKey>UID_Performance_Line_Item__c.UID_IOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UID_Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of distributor</description>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>IOP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UID_Feb_IOP__c</fullName>
        <label>Feb JBP</label>
        <summarizedField>UID_Performance_Line_Item__c.UID_IOP_Value_Curr__c</summarizedField>
        <summaryFilterItems>
            <field>UID_Performance_Line_Item__c.UID_IOP_Month__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>UID_Performance_Line_Item__c.UID_IOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UID_IOP_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>JBP External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UID_Jan_IOP__c</fullName>
        <label>Jan JBP</label>
        <summarizedField>UID_Performance_Line_Item__c.UID_IOP_Value_Curr__c</summarizedField>
        <summaryFilterItems>
            <field>UID_Performance_Line_Item__c.UID_IOP_Month__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>UID_Performance_Line_Item__c.UID_IOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UID_Jul_IOP__c</fullName>
        <label>Jul JBP</label>
        <summarizedField>UID_Performance_Line_Item__c.UID_IOP_Value_Curr__c</summarizedField>
        <summaryFilterItems>
            <field>UID_Performance_Line_Item__c.UID_IOP_Month__c</field>
            <operation>equals</operation>
            <value>7</value>
        </summaryFilterItems>
        <summaryForeignKey>UID_Performance_Line_Item__c.UID_IOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UID_Jun_IOP__c</fullName>
        <label>Jun JBP</label>
        <summarizedField>UID_Performance_Line_Item__c.UID_IOP_Value_Curr__c</summarizedField>
        <summaryFilterItems>
            <field>UID_Performance_Line_Item__c.UID_IOP_Month__c</field>
            <operation>equals</operation>
            <value>6</value>
        </summaryFilterItems>
        <summaryForeignKey>UID_Performance_Line_Item__c.UID_IOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UID_Mar_IOP__c</fullName>
        <label>Mar JBP</label>
        <summarizedField>UID_Performance_Line_Item__c.UID_IOP_Value_Curr__c</summarizedField>
        <summaryFilterItems>
            <field>UID_Performance_Line_Item__c.UID_IOP_Month__c</field>
            <operation>equals</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryForeignKey>UID_Performance_Line_Item__c.UID_IOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UID_May_IOP__c</fullName>
        <label>May JBP</label>
        <summarizedField>UID_Performance_Line_Item__c.UID_IOP_Value_Curr__c</summarizedField>
        <summaryFilterItems>
            <field>UID_Performance_Line_Item__c.UID_IOP_Month__c</field>
            <operation>equals</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>UID_Performance_Line_Item__c.UID_IOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UID_Nov_IOP__c</fullName>
        <label>Nov JBP</label>
        <summarizedField>UID_Performance_Line_Item__c.UID_IOP_Value_Curr__c</summarizedField>
        <summaryFilterItems>
            <field>UID_Performance_Line_Item__c.UID_IOP_Month__c</field>
            <operation>equals</operation>
            <value>11</value>
        </summaryFilterItems>
        <summaryForeignKey>UID_Performance_Line_Item__c.UID_IOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UID_Oct_IOP__c</fullName>
        <label>Oct JBP</label>
        <summarizedField>UID_Performance_Line_Item__c.UID_IOP_Value_Curr__c</summarizedField>
        <summaryFilterItems>
            <field>UID_Performance_Line_Item__c.UID_IOP_Month__c</field>
            <operation>equals</operation>
            <value>10</value>
        </summaryFilterItems>
        <summaryForeignKey>UID_Performance_Line_Item__c.UID_IOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UID_Order_RecordType_c__c</fullName>
        <label>Order_RecordType__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID_Sep_IOP__c</fullName>
        <label>Sep JBP</label>
        <summarizedField>UID_Performance_Line_Item__c.UID_IOP_Value_Curr__c</summarizedField>
        <summaryFilterItems>
            <field>UID_Performance_Line_Item__c.UID_IOP_Month__c</field>
            <operation>equals</operation>
            <value>9</value>
        </summaryFilterItems>
        <summaryForeignKey>UID_Performance_Line_Item__c.UID_IOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UID_Year__c</fullName>
        <description>Year of IOP forecast assigned to distributor</description>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Performance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IOP-{0000}</displayFormat>
        <label>Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>